Fix: font color of nav bar to provide greater contrast.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ h2 {
     display: inline;
     font-size: 110%;
     letter-spacing: 2px;
-    color: #3E6E7A;
+    color: #244047;
     background-color: #65B3C7;
     font-weight: bold;
     border: #1F7085 solid 3px;
